# django_homework_2

./: README.md  pyproject.toml
blog/: admin.py  forms.py  models.py  urls.py  views.py
blog/migrations/: 0001_initial.py  0002_alter_post_slug_alter_post_views.py  0003_alter_post_slug.py  0004_post_publish.py
blog/templates/: post_confirm_delete.html  post_detail.html  post_form.html  posts_in_process.html  posts_list.html  test.html
catalog/: admin.py  forms.py  models.py  services.py  urls.py  views.py
catalog/fixtures/: catalog_data.json
catalog/migrations/: 0001_initial.py  0002_alter_product_currency_delete_version.py  0002_alter_product_image.py  0003_alter_product_currency_version.py  0003_product_currency_product_slug.py  0004_alter_product_currency_alter_version_is_active_and_more.py  0004_contact_alter_product_currency.py  0005_alter_product_currency_alter_product_slug.py  0005_alter_product_currency_alter_version_is_active.py  0006_alter_product_currency.py  0006_rename_product_id_version_product_and_more.py  0007_alter_category_options_alter_product_options_and_more.py  0007_alter_product_currency.py  0008_alter_product_currency.py  0009_alter_product_currency.py  0009_product_owner_alter_product_currency.py  0010_alter_product_currency.py  0010_product_status_alter_product_currency.py  0011_alter_product_currency.py  0011_alter_product_options_alter_product_currency.py  0012_alter_product_currency.py  0012_alter_product_options_alter_product_currency.py  (+2 more)
config/: settings.py  urls.py
users/: forms.py  models.py  urls.py  views.py
(+17 files in other folders)
